# wgpu-vrm

./: .gitignore  Cargo.toml  build.rs  index.html
src/: lib.rs  model.rs  resources.rs  shader.wgsl  texture.rs
